next pokus